--- a/module06/NorthwindMvcApp/Views/BlogArticles/Index.cshtml
+++ b/module06/NorthwindMvcApp/Views/BlogArticles/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Northwind.Services.Blogging.BlogArticle>
+﻿@model IEnumerable<BlogArticleViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -29,26 +29,26 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Text)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Posted)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AuthorId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            string shortString = item.Text.Length > 50 ? $"{item.Text.Substring(0, 50)}..." : item.Text;
+            string date = item.Posted.ToShortDateString();
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => shortString)
+                </td>
+                <td style="min-width: 100px">
+                    @Html.DisplayFor(modelItem => date)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
