--- a/module06/NorthwindMvcApp/Views/BlogArticles/Delete.cshtml
+++ b/module06/NorthwindMvcApp/Views/BlogArticles/Delete.cshtml
@@ -1,18 +1,17 @@
-﻿@model Northwind.Services.Blogging.BlogArticle
+﻿@model BlogArticleViewModel
 
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Delete article @Model.Title</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this article?</h3>
 <div>
-    <h4>BlogArticle</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-7">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd class = "col-sm-10">
@@ -29,12 +28,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Posted)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AuthorId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AuthorId)
         </dd>
     </dl>
     
