--- a/module06/NorthwindMvcApp/Views/BlogArticles/Edit.cshtml
+++ b/module06/NorthwindMvcApp/Views/BlogArticles/Edit.cshtml
@@ -1,16 +1,15 @@
-﻿@model Northwind.Services.Blogging.BlogArticle
+﻿@model BlogArticleViewModel
 
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Edit article</h1>
 
-<h4>BlogArticle</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-7">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -21,18 +20,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Text" class="control-label"></label>
-                <input asp-for="Text" class="form-control" />
+                <textarea asp-for="Text" class="form-control">@Model.Text</textarea>
                 <span asp-validation-for="Text" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Posted" class="control-label"></label>
-                <input asp-for="Posted" class="form-control" />
-                <span asp-validation-for="Posted" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AuthorId" class="control-label"></label>
-                <input asp-for="AuthorId" class="form-control" />
-                <span asp-validation-for="AuthorId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
