--- a/module06/NorthwindMvcApp/Views/Home/Index.cshtml
+++ b/module06/NorthwindMvcApp/Views/Home/Index.cshtml
@@ -4,5 +4,10 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    @foreach (var claim in this.Context.User?.Claims)
+    {
+        <p>Type: @claim.Type</p>
+        <p>Value: @claim.Value</p>
+    }
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
