--- a/module06/NorthwindMvcApp/Views/_ViewImports.cshtml
+++ b/module06/NorthwindMvcApp/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using NorthwindMvcApp
 @using NorthwindMvcApp.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, NorthwindMvcApp
+@addTagHelper *, PageLinkTagHelper
