--- a/module06/NorthwindMvcApp/Views/Account/Login.cshtml
+++ b/module06/NorthwindMvcApp/Views/Account/Login.cshtml
@@ -1,25 +1,36 @@
 ﻿@using NorthwindMvcApp.ViewModels.Users
 @model LoginViewModel
- 
-<h2>Вход на сайт</h2>
- 
-@*<a asp-action="Register" asp-controller="Account">Регистрация</a>*@
- 
-<form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
-    <div class="validation" asp-validation-summary="ModelOnly"></div>
-    <div>
-        <div class="form-group">
-            <label asp-for="Name">Введите Имя</label>
-            <input type="text" asp-for="Name" />
-            <span asp-validation-for="Name" />
+
+@if (User.Identity.IsAuthenticated)
+{
+    <h2>You are logged in as @User.Identity.Name</h2>
+}
+else
+{
+    <h2>Login</h2>
+
+    <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
+        <div class="validation" asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div>
+            <div class="form-group w-25">
+                <label asp-for="Name" class="control-label">Enter user name</label>
+                <input type="text" asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger" />
+            </div>
+            <div class="form-group w-25">
+                <label asp-for="Password" class="control-label">Enter your password</label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Login" class="btn btn-primary" />
+            </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Password">Введите пароль</label>
-            <input asp-for="Password" />
-            <span asp-validation-for="Password" />
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Войти" class="btn" />
-        </div>
-    </div>
-</form>
+    </form>
+}
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
