--- a/module06/NorthwindMvcApp/Views/Product/Delete.cshtml
+++ b/module06/NorthwindMvcApp/Views/Product/Delete.cshtml
@@ -6,33 +6,77 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete product @Model.Name</h1>
-
 <h3>Are you sure you want to delete this product?</h3>
 <div>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-7">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoryName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UnitsInStock)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UnitsInStock)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
+    <div class="container mb-3">
+        <div class="row">
+            <div class="col-sm-2 font-weight-bold">
+                @Html.DisplayNameFor(model => model.Name)
+            </div>
+            <div class="col-lg">
+                @Html.DisplayFor(model => model.Name)
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2 font-weight-bold">
+                @Html.DisplayNameFor(model => model.CategoryName)
+            </div>
+            <div class="col-lg">
+                @Html.DisplayFor(model => model.CategoryName)
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2 font-weight-bold">
+                @Html.DisplayNameFor(model => model.UnitsInStock)
+            </div>
+            <div class="col-lg">
+                @Html.DisplayFor(model => model.UnitsInStock)
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2 font-weight-bold">
+                @Html.DisplayNameFor(model => model.QuantityPerUnit)
+            </div>
+           <div class="col-lg">
+                @Html.DisplayFor(model => model.QuantityPerUnit)
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2 font-weight-bold">
+                @Html.DisplayNameFor(model => model.UnitPrice)
+            </div>
+            <div class="col-lg">
+                @Html.DisplayFor(model => model.UnitPrice)
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2 font-weight-bold">
+                @Html.DisplayNameFor(model => model.UnitsOnOrder)
+            </div>
+           <div class="col-lg">
+                @Html.DisplayFor(model => model.UnitsOnOrder)
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2 font-weight-bold">
+                @Html.DisplayNameFor(model => model.ReorderLevel)
+            </div>
+           <div class="col-lg">
+                @Html.DisplayFor(model => model.ReorderLevel)
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2 font-weight-bold">
+                @Html.DisplayNameFor(model => model.Discontinued)
+            </div>
+            <div class="col-lg">
+                @Html.DisplayFor(model => model.Discontinued)
+            </div>
+        </div>
+    </div>
+
+    <form asp-action="DeleteConfirmed">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
