--- a/module06/NorthwindMvcApp/Views/Shared/Components/CommentForm.cshtml
+++ b/module06/NorthwindMvcApp/Views/Shared/Components/CommentForm.cshtml
@@ -2,22 +2,19 @@
 
 @{
     <div>
-    <form  asp-action="CreateComment">
+    <form asp-action="CreateComment">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="AuthorId" class="control-label"></label>
-                <input asp-for="AuthorId" class="form-control" />
+                <input type="hidden" asp-for="AuthorId" class="form-control" value="@User.FindFirst(c => c.Type == "NorthwindId").Value" />
                 <span asp-validation-for="AuthorId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Text" class="control-label"></label>
-                <textarea asp-for="Text" class="form-control"></textarea>
+                <textarea rows="6" asp-for="Text" class="form-control"></textarea>
                 <span asp-validation-for="Text" class="text-danger"></span>
-
                 <input asp-for="ArticleId" type="hidden"/>@Context.Request.RouteValues["article-id"]
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Leave comment" class="btn btn-primary" />
             </div>
         </form>
 </div>
