Implement related products for article controller

--- a/module06/NorthwindMvcApp/Views/BlogArticles/Details.cshtml
+++ b/module06/NorthwindMvcApp/Views/BlogArticles/Details.cshtml
@@ -5,14 +5,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-
 <div>
     <h3>@Model.Title</h3>
     <hr />
     <img src="data:image;base64,@Convert.ToBase64String(@Model.AuthorPhoto[78..])" width="60" height="60" />
     <h3>@Model.AuthorName, @Model.Posted.ToShortDateString()</h3>
     <p>@Model.Text</p>
+    @if (@Model.RelatedProducts != null && @Model.RelatedProducts.Count() > 0)
+    {
+        <div>
+            <h3>Related products</h3>
+            @foreach (var product in @Model.RelatedProducts)
+            {
+                <p>@product.Name</p>
+            }
+        </div>
+    }
     <div>
         <div>
             <h4>Leave a comment...</h4>
