--- a/module06/NorthwindMvcApp/Views/Category/Create.cshtml
+++ b/module06/NorthwindMvcApp/Views/Category/Create.cshtml
@@ -22,7 +22,7 @@
         <div class="w-25">
             <div class="form-group ">
                 <label asp-for="NewPicture" class="control-label">Picture</label>
-                <input asp-for="NewPicture" type="file" class="form-control">
+                <input asp-for="NewPicture" type="file" class="form-control-file">
                 <span asp-validation-for="NewPicture" class="text-danger"></span>
             </div>
         </div>
