--- a/module06/NorthwindMvcApp/Views/BlogArticles/Index.cshtml
+++ b/module06/NorthwindMvcApp/Views/BlogArticles/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<BlogArticleViewModel>
+﻿@using NorthwindMvcApp.ViewModels.Article
+@model BlogArticleListViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -10,45 +11,10 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Text)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Posted)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AuthorId)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            string shortString = item.Text.Length > 50 ? $"{item.Text.Substring(0, 50)}..." : item.Text;
-            string date = item.Posted.ToShortDateString();
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => shortString)
-                </td>
-                <td style="min-width: 100px">
-                    @Html.DisplayFor(modelItem => date)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+
+<partial name="ArticlesTable" model="@Model.Articles"/>
+
+<div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true"
+        page-class="btn" page-class-normal="btn-outline-dark"
+        page-class-selected="btn-primary" class="btn-group pull-right m-1">
+</div>
