--- a/module06/NorthwindMvcApp/Views/Category/Edit.cshtml
+++ b/module06/NorthwindMvcApp/Views/Category/Edit.cshtml
@@ -36,7 +36,7 @@
             }
             <div class="form-group">
                 <label asp-for="NewPicture" class="control-label"></label>
-                <input asp-for="NewPicture" type="file" class="form-control">
+                <input asp-for="NewPicture" type="file" class="form-control-file">
                 <span asp-validation-for="NewPicture" class="text-danger"></span>
             </div>
             <div class="form-group">
