--- a/module06/NorthwindMvcApp/Views/Product/Edit.cshtml
+++ b/module06/NorthwindMvcApp/Views/Product/Edit.cshtml
@@ -65,7 +65,7 @@
         <div class="w-25">
             <div class="form-group ">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <select class="custom-select" asp-for="CategoryId" asp-items="@Model.Categories"></select>
+                <select class="custom-select" asp-for="CategoryId" asp-items="@Model.CategoryItems"></select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
         </div>
