--- a/module06/NorthwindMvcApp/Views/Product/Index.cshtml
+++ b/module06/NorthwindMvcApp/Views/Product/Index.cshtml
@@ -9,13 +9,17 @@
 
 <h1>Products</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (this.User?.FindFirst(c => c.Type == ClaimTypes.Role)?.Value == "admin")
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
 
-<partial name="ProductsTable" model="@Model.Products"/>
+
+<partial name="ProductsTable" model="@Model.Products" />
 
 <div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true"
-        page-class="btn" page-class-normal="btn-outline-dark"
-        page-class-selected="btn-primary" class="btn-group pull-right m-1">
+     page-class="btn" page-class-normal="btn-outline-dark"
+     page-class-selected="btn-primary" class="btn-group pull-right m-1">
 </div>
