--- a/module06/NorthwindMvcApp/Views/Category/Delete.cshtml
+++ b/module06/NorthwindMvcApp/Views/Category/Delete.cshtml
@@ -34,7 +34,7 @@
                 @if (@Model.Picture != null && @Model.Picture.Length > 0)
                 {
                     <div>
-                        <img src="data:image;base64,@Convert.ToBase64String(@Model.Picture[78..])" width="100" height="100" />
+                        <img src="data:image;base64,@Convert.ToBase64String(@Model.Picture)" width="100" height="100" />
                     </div>
                 }
                 else
