Change folder structure

--- a/module06/NorthwindMvcApp/Views/BlogArticles/Details.cshtml
+++ b/module06/NorthwindMvcApp/Views/BlogArticles/Details.cshtml
@@ -33,7 +33,7 @@
     <h4>Comments</h4>
     <hr />
 
-    <partial name="CommentList" model="@Model.CommentList.Comments" />
+    <partial name="Components/CommentList" model="@Model.CommentList.Comments" />
 
     <div page-model="@Model.CommentList.PagingInfo" page-action="Details" page-classes-enabled="true"
          page-class="btn" page-class-normal="btn-outline-dark" page-url-id="@Model.Id"
