--- a/module06/NorthwindMvcApp/Views/Category/Index.cshtml
+++ b/module06/NorthwindMvcApp/Views/Category/Index.cshtml
@@ -16,7 +16,7 @@
     </p>
 }
 
-<partial name="CategoriesTable" model="@Model.Categories" />
+<partial name="Components/CategoriesTable" model="@Model.Categories" />
 
 <div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true"
      page-class="btn" page-class-normal="btn-outline-dark"
