--- a/module06/NorthwindMvcApp/Views/Product/Index.cshtml
+++ b/module06/NorthwindMvcApp/Views/Product/Index.cshtml
@@ -17,7 +17,7 @@
 }
 
 
-<partial name="ProductsTable" model="@Model.Products" />
+<partial name="Components/ProductsTable" model="@Model.Products" />
 
 <div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true"
      page-class="btn" page-class-normal="btn-outline-dark"
