Fix create link and usings

--- a/module06/NorthwindMvcApp/Views/Product/Index.cshtml
+++ b/module06/NorthwindMvcApp/Views/Product/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Security.Claims
-@using NorthwindMvcApp.ViewModels.Product
+﻿@using NorthwindMvcApp.ViewModels.Product
 @model ProductsListViewModel
 
 @{
