--- a/module06/NorthwindMvcApp/Views/_ViewImports.cshtml
+++ b/module06/NorthwindMvcApp/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using NorthwindMvcApp
 @using NorthwindMvcApp.ViewModels
+@using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, NorthwindMvcApp
 @addTagHelper *, PageLinkTagHelper
