--- a/module06/NorthwindMvcApp/Views/BlogArticles/Index.cshtml
+++ b/module06/NorthwindMvcApp/Views/BlogArticles/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using NorthwindMvcApp.ViewModels.Article
+
 @model BlogArticleListViewModel
 
 @{
@@ -8,13 +9,16 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (User.FindFirst(x => x.Type == ClaimTypes.Role).Value == "employee")
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
 
-<partial name="Components/ArticlesTable" model="@Model.Articles"/>
+<partial name="Components/ArticlesTable" model="@Model.Articles" />
 
 <div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true"
-        page-class="btn" page-class-normal="btn-outline-dark"
-        page-class-selected="btn-primary" class="btn-group pull-right m-1">
+     page-class="btn" page-class-normal="btn-outline-dark"
+     page-class-selected="btn-primary" class="btn-group pull-right m-1">
 </div>
